feat: add container in lynx living spec
Change-Id: I8429d9172ec3052a777f7ff9d6632f20adef089e

--- a/docs/en/api/lynx-api/performance-api/performance-entry/init-container-entry.mdx
+++ b/docs/en/api/lynx-api/performance-api/performance-entry/init-container-entry.mdx
@@ -1,8 +1,6 @@
 # InitContainerEntry
 
-The `InitContainerEntry` interface documents key moments related for the **container** preparation work before the Lynx page is displayed. It inherits from [`PerformanceEntry`](api/lynx-api/performance-api/performance-entry).
-
-> In an App, a container is an independent module responsible for managing the lifecycle of [LynxView](guide/spec#lynxview). Its main responsibilities include creating, initializing, configuring, loading content, handling state changes, and destroying LynxView instances.
+The `InitContainerEntry` interface documents key moments related for the [container](guide/spec#container) preparation work before the Lynx page is displayed. It inherits from [`PerformanceEntry`](api/lynx-api/performance-api/performance-entry).
 
 In the initialization process, the metrics are defined as shown in the figure below:
 ![key moments of container initialization](https://lf-lynx.tiktok-cdns.com/obj/lynx-artifacts-oss-sg/lynx-website/assets/doc/init-container-entry.png)
