--- a/docs/en/api/lynx-api/performance-api/performance-entry/metric-actual-fmp-entry.mdx
+++ b/docs/en/api/lynx-api/performance-api/performance-entry/metric-actual-fmp-entry.mdx
@@ -16,7 +16,7 @@ Depending on different starting points, Lynx provides three metrics: `actualFmp`
 
 This example demonstrates how to generate and obtain a `MetricActualFmpEntry`.
 
-Lynx calculates the Actual Fmp when the marked elements have finished rendering. If you have provided container-related timestamps using [LynxView.setExtraTiming](api/lynx-native-api/lynx-view/set-extra-timing), the `MetricActualFmpEntry` includes three metrics: `actualFmp`, `lynxActualFmp`, and `totalActualFmp`. Otherwise, the `MetricActualFmpEntry` only contains `lynxActualFmp`. After supplementing the container timestamp, the remaining metrics will be recalculated. Once recalculation is complete, Lynx will send a new `lynxActualFmp` containing all the metrics.
+Lynx calculates the Actual Fmp when the marked elements have finished rendering. If you have provided container-related timestamps using [LynxView.setExtraTiming](api/lynx-native-api/lynx-view/set-extra-timing), the `MetricActualFmpEntry` includes three metrics: `actualFmp`, `lynxActualFmp`, and `totalActualFmp`. Otherwise, the `MetricActualFmpEntry` only contains `lynxActualFmp`. After supplementing the [container](guide/spec#container) timestamp, the remaining metrics will be recalculated. Once recalculation is complete, Lynx will send a new `lynxActualFmp` containing all the metrics.
 
 import { Go } from '@lynx';
 
