--- a/docs/en/api/lynx-api/performance-api/performance-entry/metric-fcp-entry.mdx
+++ b/docs/en/api/lynx-api/performance-api/performance-entry/metric-fcp-entry.mdx
@@ -14,7 +14,7 @@ Depending on different starting points, Lynx provides three metrics: `fcp`, `lyn
 
 This example demonstrates how to obtain a `MetricFcpEntry`.
 
-Lynx calculates the FCP upon completion of the first frame rendering. If you have provided container-related timestamps using [LynxView.setExtraTiming](api/lynx-native-api/lynx-view/set-extra-timing), the `MetricFcpEntry` includes `fcp`, `lynxFcp`, and `totalFcp`. Otherwise, the `MetricFcpEntry` only contains `lynxFcp`. After supplementing the container timestamp, the remaining metrics will be recalculated. Once recalculation is complete, Lynx will send a new `MetricFcpEntry` containing all the metrics.
+Lynx calculates the FCP upon completion of the first frame rendering. If you have provided container-related timestamps using [LynxView.setExtraTiming](api/lynx-native-api/lynx-view/set-extra-timing), the `MetricFcpEntry` includes `fcp`, `lynxFcp`, and `totalFcp`. Otherwise, the `MetricFcpEntry` only contains `lynxFcp`. After supplementing the [container](guide/spec#container) timestamp, the remaining metrics will be recalculated. Once recalculation is complete, Lynx will send a new `MetricFcpEntry` containing all the metrics.
 
 import { Go } from '@lynx';
 
