--- a/docs/en/guide/performance/evaluating-performance.mdx
+++ b/docs/en/guide/performance/evaluating-performance.mdx
@@ -50,7 +50,7 @@ cause users to abandon accessing the page content or even be unable to access th
 From the moment a user clicks a link to the display of a new page, an application needs to complete preparatory tasks, including initializing the page container and
 preparing the [TemplateBundle](guide/spec#template-bundle).
 
-The initialization phase includes three key steps: [Container](api/lynx-api/performance-api/performance-entry/init-container-entry) setup, [LynxView](guide/spec#lynxview①)
+The initialization phase includes three key steps: [Container](guide/spec#container) setup, [LynxView](guide/spec#lynxview①)
 creation, and [Background Thread Runtime](guide/spec#background-thread-runtime) preparation. The [Performance API](api/lynx-api/performance-api) provides
 [`InitContainerEntry`](api/lynx-api/performance-api/performance-entry/init-container-entry), [`InitLynxviewEntry`](api/lynx-api/performance-api/performance-entry/init-lynxview-entry),
 and [`InitBackgroundRuntimeEntry`](api/lynx-api/performance-api/performance-entry/init-background-runtime-entry) to describe these key moments. You can
