--- a/docs/zh/api/lynx-api/performance-api/performance-entry/init-container-entry.mdx
+++ b/docs/zh/api/lynx-api/performance-api/performance-entry/init-container-entry.mdx
@@ -1,8 +1,6 @@
 # InitContainerEntry
 
-`InitContainerEntry` 接口提供了 Lynx 页面显示前**容器**（**Container**）准备工作的关键时间点，它继承自 [`PerformanceEntry`](api/lynx-api/performance-api/performance-entry)。
-
-> 容器是客户端开发中的一个概念。在应用程序中，容器是一个独立的模块，负责管理 [LynxView](guide/spec#lynxview) 的生命周期。其主要职责包括创建、初始化、配置、加载内容、处理状态变化及销毁 LynxView 实例等。
+`InitContainerEntry` 接口提供了 Lynx 页面显示前[容器](guide/spec#container)准备工作的关键时间点，它继承自 [`PerformanceEntry`](api/lynx-api/performance-api/performance-entry)。
 
 在初始化流程中，指标的定义如下图：
 ![container 初始化的关键时间](https://lf-lynx.tiktok-cdns.com/obj/lynx-artifacts-oss-sg/lynx-website/assets/doc/init-container-entry.png)
