--- a/docs/zh/api/lynx-api/performance-api/performance-entry/metric-actual-fmp-entry.mdx
+++ b/docs/zh/api/lynx-api/performance-api/performance-entry/metric-actual-fmp-entry.mdx
@@ -18,7 +18,7 @@ Actual Fmp 是衡量页面“真实数据”渲染完成所需时间的关键性
 
 该示例展示了如何产生和获取 `MetricActualFmpEntry`。
 
-Lynx 在被标记的元件渲染完成时计算 Actual Fmp。如果已经通过 [LynxView.setExtraTiming](api/lynx-native-api/lynx-view/set-extra-timing) 提供了容器（Container）时间戳，那么收到的 `MetricActualFmpEntry` 里会包含 `actualFmp`、`lynxActualFmp` 和 `totalActualFmp` 三项指标。否则，`MetricFcpEntry` 只包含 `lynxActualFmp`。补充容器时间戳后，其余指标将被重新计算。重新计算完成后，Lynx 将发送一个新的包含所有指标的 `MetricActualFmpEntry`。
+Lynx 在被标记的元件渲染完成时计算 Actual Fmp。如果已经通过 [LynxView.setExtraTiming](api/lynx-native-api/lynx-view/set-extra-timing) 提供了[容器](guide/spec#container)时间戳，那么收到的 `MetricActualFmpEntry` 里会包含 `actualFmp`、`lynxActualFmp` 和 `totalActualFmp` 三项指标。否则，`MetricFcpEntry` 只包含 `lynxActualFmp`。补充容器时间戳后，其余指标将被重新计算。重新计算完成后，Lynx 将发送一个新的包含所有指标的 `MetricActualFmpEntry`。
 
 import { Go } from '@lynx';
 
