--- a/docs/zh/guide/performance/evaluating-performance.mdx
+++ b/docs/zh/guide/performance/evaluating-performance.mdx
@@ -36,9 +36,9 @@
 
 ### 初始化
 
-从用户点击链接到新的页面显示，应用程序需要完成包括页面容器初始化、准备 [TemplateBundle](api/lynx-native-api/template-bundle) 等初始化工作。
+从用户点击链接到新的页面显示，应用程序需要完成包括容器初始化、准备 [TemplateBundle](api/lynx-native-api/template-bundle) 等初始化工作。
 
-如下图所示是页面显示前必须经过的初始化阶段，包括了[容器（Container）](api/lynx-api/performance-api/performance-entry/init-container-entry)、[LynxView](guide/spec#lynxview①) 和 [Background Thread Runtime](guide/spec#background-thread-runtime) 三部分的初始化耗时。[性能 API](api/lynx-api/performance-api) 提供了 [`InitContainerEntry`](api/lynx-api/performance-api/performance-entry/init-container-entry)、[`InitLynxviewEntry`](api/lynx-api/performance-api/performance-entry/init-lynxview-entry) 和 [`InitBackgroundRuntimeEntry`](api/lynx-api/performance-api/performance-entry/init-background-runtime-entry) 来描述这些阶段的关键时刻。你可以任意组合这些性能数据进行整个初始化阶段的具体分析。
+如下图所示是页面显示前必须经过的初始化阶段，包括了[容器](guide/spec#container)、[LynxView](guide/spec#lynxview①) 和 [Background Thread Runtime](guide/spec#background-thread-runtime) 三部分的初始化耗时。[性能 API](api/lynx-api/performance-api) 提供了 [`InitContainerEntry`](api/lynx-api/performance-api/performance-entry/init-container-entry)、[`InitLynxviewEntry`](api/lynx-api/performance-api/performance-entry/init-lynxview-entry) 和 [`InitBackgroundRuntimeEntry`](api/lynx-api/performance-api/performance-entry/init-background-runtime-entry) 来描述这些阶段的关键时刻。你可以任意组合这些性能数据进行整个初始化阶段的具体分析。
 
 ![完整的初始化阶段划分](https://lf-lynx.tiktok-cdns.com/obj/lynx-artifacts-oss-sg/lynx-website/assets/doc/all-init-process.png '完整的初始化阶段划分')
 
