opt: Optimize setExtraTiming API Doc. Correct the format of 'Container'.
Added definition of special behavior for repeated calls to setExtraTiming.

Added description of possible consequences of calling setExtraTiming.

Standardized references to the term `Container` in all documents.

Change-Id: Icfaf2a844b1b3f921491cb8e1fb1d932da57c5d8

--- a/docs/en/api/lynx-api/performance-api/performance-entry.mdx
+++ b/docs/en/api/lynx-api/performance-api/performance-entry.mdx
@@ -2,7 +2,7 @@ import { RuntimeBadge } from '@lynx';
 
 # PerformanceEntry
 
-`PerformanceEntry` is a base interface used to describe the complete data of performance events. All performance events inherit from and extend it, commonly including container initialization, page loading, and rendering times.
+`PerformanceEntry` is a base interface used to describe the complete data of performance events. All performance events inherit from and extend it, commonly including [container](guide/spec#container) initialization, page loading, and rendering times.
 
 All performance events are summarized in the figure below:
 
