--- a/docs/zh/api/lynx-api/performance-api/performance-entry.mdx
+++ b/docs/zh/api/lynx-api/performance-api/performance-entry.mdx
@@ -2,7 +2,7 @@ import { RuntimeBadge } from '@lynx';
 
 # PerformanceEntry
 
-`PerformanceEntry` 是一个基类接口，用于描述性能事件的完整数据。所有性能事件都继承并扩展它，常见的包括容器初始化、页面加载和渲染时间等。
+`PerformanceEntry` 是一个基类接口，用于描述性能事件的完整数据。所有性能事件都继承并扩展它，常见的包括[容器](guide/spec#container)初始化、页面加载和渲染时间等。
 
 所有性能事件汇总如下图所示：
 
