--- a/docs/zh/api/lynx-api/performance-api/performance-entry/pipeline-entry.mdx
+++ b/docs/zh/api/lynx-api/performance-api/performance-entry/pipeline-entry.mdx
@@ -4,7 +4,7 @@ import { RuntimeBadge } from '@lynx';
 
 `PipelineEntry` 负责记录 [Lynx Pipeline](/guide/spec#lynx-pipeline) 中[框架渲染（Framework Rendering）](/guide/spec#framework-rendering)和[引擎渲染（Pixel Pipeline）](/guide/spec#pixel-pipeline)关键时刻的性能数据，继承自 [`PerformanceEntry`](../performance-entry)。
 
-Lynx Pipeline 是指从渲染触发到最终显示的完整流程。该流程分为四个主要部分：加载（Load）、解析（Parse）、框架渲染（FrameworkPipeline）、引擎渲染（PixelPipeline）。
+Lynx Pipeline 是指从渲染触发到最终显示的完整流程。该流程分为四个主要部分：[加载（Load）](/guide/spec.html#load)、[解析（Parse）](https://lynxjs.org/guide/spec.html#parse)、[框架渲染（Framework Rendering）](/guide/spec#framework-rendering)、[引擎渲染（Pixel Pipeline）](/guide/spec#pixel-pipeline)。
 
 由于 Lynx Pipeline 触发频繁，框架仅统计以下两种情况：
 
@@ -169,15 +169,15 @@ layoutUiOperationExecuteEnd: number;
 paintEnd: number;
 ```
 
-基于 UI 和 UITree，完成最终像素化的结束时间戳。该时间戳是一个表示为浮点型的 Unix 时间戳（单位：毫秒），精确到小数点后三位。例如：1739594612307.429。
+执行[绘制](/guide/spec#paint)结束的时间戳。该时间戳是一个表示为浮点型的 Unix 时间戳（单位：毫秒），精确到小数点后三位。例如：1739594612307.429。
 
-### frameworkPipelineTiming
+### frameworkRenderingTiming
 
 ```ts
-frameworkPipelineTiming:  FrameworkPipelineTiming[keyof FrameworkPipelineTiming];
+frameworkRenderingTiming: FrameworkRenderingTiming;
 ```
 
-[框架渲染](/guide/spec#framework-rendering)中关键阶段的性能数据. 类型为 [`FrameworkPipelineTiming`](/api/lynx-api/performance-api/framework-pipeline-timing)。
+[框架渲染](/guide/spec#framework-rendering)中关键阶段的性能数据. 类型为 [`frameworkRenderingTiming`](/api/lynx-api/performance-api/framework-rendering-timing)。
 
 ## 兼容性
 
