--- a/docs/en/api/lynx-api/performance-api/performance-entry/load-bundle-entry.mdx
+++ b/docs/en/api/lynx-api/performance-api/performance-entry/load-bundle-entry.mdx
@@ -199,13 +199,13 @@ paintEnd: number;
 
 The timestamp for the end of completing the final pixelation based on UI and UITree. This timestamp is represented as a floating-point Unix timestamp (in milliseconds) with three decimal places. For example: 1739594612307.429.
 
-### frameworkPipelineTiming
+### frameworkRenderingTiming
 
 ```ts
-frameworkPipelineTiming: FrameworkPipelineTiming[keyof FrameworkPipelineTiming];
+frameworkRenderingTiming: FrameworkRenderingTiming;
 ```
 
-Performance data for key stages in [Framework Rendering](/guide/spec#framework-rendering). The type is [`FrameworkPipelineTiming`](/api/lynx-api/performance-api/framework-pipeline-timing).
+Performance data for key stages in [Framework Rendering](/guide/spec#framework-rendering). The type is [`FrameworkRenderingTiming`](/api/lynx-api/performance-api/framework-rendering-timing).
 
 ## Compatibility
 
