--- a/docs/en/api/lynx-api/performance-api/performance-entry/pipeline-entry.mdx
+++ b/docs/en/api/lynx-api/performance-api/performance-entry/pipeline-entry.mdx
@@ -4,7 +4,7 @@ import { RuntimeBadge } from '@lynx';
 
 `PipelineEntry` is responsible for recording performance data at key moments during the [Lynx Pipeline](/guide/spec#lynx-pipeline), specifically for [Framework Rendering](/guide/spec#framework-rendering) and [Pixel Pipeline](/guide/spec#pixel-pipeline). It inherits from [`PerformanceEntry`](../performance-entry).
 
-The Lynx Pipeline refers to the complete process from the trigger of rendering to the final display. This process is divided into four main parts: Load, Parse, Framework Rendering (FrameworkPipeline), and Engine Rendering (PixelPipeline).
+The Lynx Pipeline refers to the complete process from the trigger of rendering to the final display. This process is divided into four main parts: [Load](/guide/spec#load), [Parse](/guide/spec#parse), [Framework Rendering](/guide/spec#framework-rendering), and [Pixel Pipeline](/guide/spec#pixel-pipeline).
 
 Due to the frequent triggering of the Lynx Pipeline, the framework only records the following two cases:
 
@@ -169,15 +169,15 @@ The timestamp for the end of executing [UI operations](/guide/spec#ui-op) relate
 paintEnd: number;
 ```
 
-The timestamp for the end of completing the final pixelation based on UI and UITree. This timestamp is represented as a floating-point Unix timestamp (in milliseconds) with three decimal places. For example: 1739594612307.429.
+The timestamp when the [paint](/guide/spec#paint) ends. This timestamp is represented as a floating-point Unix timestamp (in milliseconds) with three decimal places. For example: 1739594612307.429.
 
-### frameworkPipelineTiming
+### frameworkRenderingTiming
 
 ```ts
-frameworkPipelineTiming: FrameworkPipelineTiming[keyof FrameworkPipelineTiming];
+frameworkRenderingTiming: FrameworkRenderingTiming;
 ```
 
-Performance data for key stages in [Framework Rendering](/guide/spec#framework-rendering). The type is [`FrameworkPipelineTiming`](/api/lynx-api/performance-api/framework-pipeline-timing).
+Performance data for key stages in [Framework Rendering](/guide/spec#framework-rendering). The type is [`FrameworkRenderingTiming`](/api/lynx-api/performance-api/framework-rendering-timing).
 
 ## Compatibility
 
