--- a/docs/zh/api/lynx-api/performance-api/performance-entry/load-bundle-entry.mdx
+++ b/docs/zh/api/lynx-api/performance-api/performance-entry/load-bundle-entry.mdx
@@ -201,13 +201,13 @@ paintEnd: number;
 
 基于 UI 和 UITree，完成最终像素化的结束时间戳。该时间戳是一个表示为浮点型的 Unix 时间戳（单位：毫秒），精确到小数点后三位。例如：1739594612307.429。
 
-### frameworkPipelineTiming
+### frameworkRenderingTiming
 
 ```ts
-frameworkPipelineTiming:  FrameworkPipelineTiming[keyof FrameworkPipelineTiming];
+frameworkRenderingTiming: FrameworkRenderingTiming;
 ```
 
-[框架渲染](/guide/spec#framework-rendering)中关键阶段的性能数据. 类型为 [`FrameworkPipelineTiming`](/api/lynx-api/performance-api/framework-pipeline-timing)。
+[框架渲染](/guide/spec#framework-rendering)中关键阶段的性能数据. 类型为 [`FrameworkRenderingTiming`](/api/lynx-api/performance-api/framework-rendering-timing)。
 
 ## 兼容性
 
